# mlops-bootcamp

./: .gitignore
hw01_airbnd-ops/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.txt
hw01_airbnd-ops/reports/: hw01_a_run_report.md
hw01_airbnd-ops/src/airbnb_ops/: cli.py  config.py  extract.py  pii.py  transform.py  validate.py
hw02_sql-metabase/: 02_sql_performance_metabase_student.ipynb
hw02_sql-metabase/reports/: baseline_explain_analyze.txt
hw02_sql-metabase/sql/: 01_baseline_neighbourhood_summary.sql  02_create_materialized_view.sql
hw11_etl-pipeline/: 01_etl_pipeline_student.ipynb  README.md  requirements.txt
hw11_etl-pipeline/data/features/: listing_availability_features_v1_student.csv  listing_availability_features_v1_student.parquet  listing_availability_features_v1_student_metadata.json  listing_availability_features_v1_student_validation_report.json  pii_audit_v1_student.csv
hw12_mlflow/: 02_mlflow_experiments_student.ipynb  README.md  pipeline.pkl  requirements.txt
hw13_fastapi-serving/: README.md
hw13_fastapi-serving/app/: config.py  main.py  model_loader.py  predictor.py
hw21_model-serving/: .dockerignore  .env.example  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  docker-compose.yml  pyproject.toml  requirements.txt
hw21_model-serving/k8s/: deployment.yaml  service.yaml
hw21_model-serving/reports/: docker_size_report.md
hw21_model-serving/src/airbnb_serving/: app.py  (+2 more)
hw22_deployment/HW3_A/: README.md  encoder_bundle.ipynb
hw22_deployment/HW3_B/: compose.yaml
(+18 files in other folders)
