[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "airbnb-ops"
version = "0.1.0"
description = "Dockerized Airbnb operations pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "typer",
    "rich"
]


[project.scripts]
airbnb-ops = "airbnb_ops.cli:run"